fixed a bug on iOS regarding the message overlapping the card

--- a/css/style.css
+++ b/css/style.css
@@ -226,8 +226,9 @@ body:before{
 #message{
 	position:absolute;
 	top:0px;
-	left:0px;
-	width:100%;
+	left:50%;
+	width:280px;
+	margin-left:-140px;
 	height:100%;
 
 	background-image:url(../img/explosion.gif);
@@ -236,6 +237,8 @@ body:before{
 	background-repeat:no-repeat;
 
 	display:none;
+
+	-webkit-transform:translateZ(150px);
 }
 
 #message:before{
@@ -249,12 +252,12 @@ body:before{
 	display:inline-block;
 	vertical-align:middle;
 	font-weight:bold;
-	font-size:50px;
+	font-size:44px;
 	line-height:60px;
 	color:#FFF;
 	-webkit-text-stroke:2px #000;
 	text-shadow:15px 15px 40px #000, -15px -15px 40px #000, 15px -15px 40px #000, -15px 15px 40px #000;
-	width:300px;
+	width:260px;
 }
 
 #message:after{
